trunk/Archive2/05/1a30c40ff8259f/output
main.cpp:8:9: error: call to 'g' is ambiguous
  (void)g(1);
        ^
main.cpp:2:6: note: candidate function [with T = int]
auto g(T t) { return t; }
     ^
main.cpp:5:3: note: candidate function [with T = int]
T g(T t) { return t; }
  ^
1 error generated.
